그리디 - 보트 문제

--- a/Greedy/boat.ipynb
+++ b/Greedy/boat.ipynb
@@ -28,7 +28,8 @@
     "import java.util.Objects;\n",
     "\n",
     "/**\n",
-    " * 프로그래머스 문제 : \n",
+    " * 문제 카테고리 : Greedy\n",
+    " * 프로그래머스 구명보트 문제 : https://school.programmers.co.kr/learn/courses/30/lessons/42885\n",
     " */\n",
     "class Solution {\n",
     "    public int solution(int[] people, int limit) {\n",
